--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -5,6 +5,7 @@
 @use "override";
 @use "layout";
 @use "header";
+@use "targeting";
 @use "style";
 
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css");
