--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -8,4 +8,9 @@
 @use "targeting";
 @use "style";
 
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css");
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/PretendardVariable.woff2") format("woff2");
+  font-weight: 1 1000;
+  font-display: swap;
+}
