--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,5 +1,6 @@
 @use "vue-select/dist/vue-select.css";
 @use 'tippy.js/dist/tippy.css';
+@use '@vuepic/vue-datepicker/dist/main.css';
 @use "common";
 @use "animation";
 @use "override";
