--- a/src/assets/sass/_style.scss
+++ b/src/assets/sass/_style.scss
@@ -604,6 +604,12 @@
             display: block;
             width: 100%;
             height: 100%;
+        }
+
+        label > span {
+            display: block;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
@@ -873,6 +879,12 @@
         }
         
     }
+     &.non-header{
+        border-top: 1px solid modules.$color_secondary;
+        .table-body{
+            height: 100%;
+        }
+     }
 }
 
 .table-normal{
