--- a/src/assets/sass/_targeting.scss
+++ b/src/assets/sass/_targeting.scss
@@ -55,6 +55,7 @@
                 transition: all ease 0.3s;
                 &:disabled{
                     cursor: default;
+                    color: modules.$color_blueG_500 !important;
                 }
             }
             .label{
@@ -91,9 +92,9 @@
         &.active{
             .item{
                 .circle{
-                    background-color: modules.$color_bgRed;
+                    background-color: modules.$color_bgRed !important;
                     border: 3px solid modules.$color_primary;
-                    color: modules.$color_primary;
+                    color: modules.$color_primary !important;
                     &:hover{
                         background-color: modules.$color_bgRed;
                         border: 3px solid modules.$color_primary;
@@ -174,6 +175,14 @@
             background: modules.$color_blueG_700 url(../images/icon_next_arrow.svg) no-repeat calc(100% - 24px) 50%;
             span{
                 margin-right: 15px;
+            }
+        }
+        &.complete{
+            background: modules.$color_primary;
+            border-color: modules.$color_primary;
+            &:hover{
+                background: modules.$color_secondary;
+                border-color: modules.$color_secondary;
             }
         }
         &:hover{
@@ -391,6 +400,11 @@ ul.targeting-detail-condition-wrap {
             //flex-wrap: wrap;
             flex-direction: column;
             gap: 16px;
+            .btn-case {
+                height: 36px;
+                font-weight: 500;
+                background-color: modules.$color_white
+            }
             .limit-group {
                 flex-grow: 1;
                 position: relative;
@@ -821,7 +835,7 @@ ul.targeting-detail-condition-wrap {
         gap: 10px;
         margin-top: 30px;
     }
-    &.step2, &.step3{
+    &.step2, &.step3{ 
         width: 100%;
         display: flex;
         justify-content: center;
@@ -859,7 +873,7 @@ ul.targeting-detail-condition-wrap {
                     display: grid;
                     grid-template-columns: repeat(4, 1fr);
                 }
-            }
+            }            
             &.targeting-infos{
                 width: 680px;
                 margin-bottom: 0;
@@ -878,26 +892,7 @@ ul.targeting-detail-condition-wrap {
                             margin-left: 4px;
                         }
                     }
-                }
-                .row-flex{
-                    display: flex;
-                    align-items: center;
-                    gap: 8px;
-                    .v-select__wrap{
-                        flex: 1;
-                    }
-                    &.w410{
-                        width: 410px !important;
-                    }
-                    &.flex-1{
-                        > *{
-                            flex: 1 !important;
-                        }
-                    }
-                    &.flex-align-end{
-                        align-items: flex-end !important;
-                    }
-                }
+                }                
             }
             &.col-2{
                 display: flex;
@@ -915,6 +910,23 @@ ul.targeting-detail-condition-wrap {
                 margin-right: 8px;
             }
         }
+    }
+    &.step7{
+        .item-row{
+            &.col-2{
+                width: 680px;
+                .btn-radios{
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                }
+            }
+        }
+        
+    }
+    &.step8{
+        .item-row{           
+            width: 680px;         
+        }        
     }
     .btn-basicInfos{
         height: 41px;
@@ -943,7 +955,7 @@ ul.targeting-detail-condition-wrap {
             cursor: default;
         }
     }
-    &.scene-loader{
+    &.scene-loader, &.scene-complete{
         padding-top: 0;
         height: 100%;
         position: absolute;
@@ -951,6 +963,26 @@ ul.targeting-detail-condition-wrap {
         top: 0;
         left: 0;
         z-index: 2;
+    }
+    .row-flex{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        width: 100%;
+        .v-select__wrap{
+            flex: 1;
+        }
+        &.w410{
+            width: 410px !important;
+        }
+        &.flex-1{
+            > *{
+                flex: 1 ;
+            }
+        }
+        &.flex-align-end{
+            align-items: flex-end !important;
+        }
     }
 }
 .scene-loader__wrap{
@@ -1026,6 +1058,65 @@ ul.targeting-detail-condition-wrap {
     }
 }
 
+.scene-complete__wrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    .complete-content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 400px;     
+        .icon{
+            display: block;
+            width: 70px;
+            height: 50px;
+            background: url(../images/icon_step_complete.svg) no-repeat 50%;
+            margin-bottom: 30px;
+        }   
+        .info-title{
+            font-size: 24px;
+            color: modules.$color_secondary;
+            margin-bottom: 15px;            
+            strong{
+                font-weight: 600;
+                &.red{
+                    color: modules.$color_primary;
+                }
+            }
+        }
+        .info-text{
+            font-size: 14px;
+            color: modules.$color_blueG_800;
+            margin-bottom: 20px;
+        }
+        .item-row{
+            width: 100%;
+            display: flex;
+            gap: 8px;
+        }
+        .btn-link{
+            cursor: pointer;
+            display: flex;
+            border: 1px solid modules.$color_primary;
+            height: 44px;
+            box-sizing: border-box;
+            border-radius: 4px;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            color: #525960;
+            font-weight: 600;
+            flex: 1;
+            &:hover{
+                color: modules.$color_primary;
+            }
+        }
+    }
+    
+}
+
 .stage-area{
     display: flex;
     justify-content: center;
@@ -1062,6 +1153,10 @@ ul.targeting-detail-condition-wrap {
                 &.red{
                     color: modules.$color_primary;
                 }
+            }
+            .text-s{
+                font-size: 14px;
+                margin-left: 4px;
             }
         }
         .btn-radios{
@@ -1319,5 +1414,32 @@ ul.targeting-detail-condition-wrap {
         > * {
             flex: 1;
         }
+    }
+}
+
+.cms-campain{
+    height: calc(100% - 100px);
+    display: flex;
+    padding: 0 20px;
+    gap: 20px;
+    .table-row{        
+        padding: 0 !important;
+        height: calc(100% - 32px) !important;
+    }
+    .campaing, .flow-chart{
+         height: 100%;
+    }
+    .campaing{
+        flex: 1;       
+    }
+    .flow-chart{
+        flex: 0 0 320px;
+    }
+    .title-row{
+        color: modules.$color_secondary;
+        font-size: 18px;
+        font-weight: 600;
+        padding-bottom: 10px;
+        text-align: left;
     }
 }
